--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
 			<artifactId>assertj-core</artifactId>
 			<version>3.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path-assert</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
+
 	</dependencies>
 	
 	<build>
